NXP-28595: Allow running S3 tests in the CI
- Make AWS session token optional.
- Pass bucket name and prefix as System properties.
- Alway use a unique bucket prefix.